Fix position, scaling and spacing of task-form

--- a/src/styles/task-form-editor.css
+++ b/src/styles/task-form-editor.css
@@ -26,6 +26,10 @@ dialog.task-form-modal {
     &::backdrop {
         background: #ffffff0a;
     }
+
+    max-height: 100%;
+    min-width: 100%;
+    position: static;
 }  
 
 form.task-form {
@@ -35,7 +39,7 @@ form.task-form {
 form.task-form,
 form.task-editor {
     margin-inline: auto;
-    margin-top: 10%;
+    margin-top: 120px;
     padding: 1.3rem 1.1rem;
 
     color: var(--font-clr);
@@ -186,5 +190,57 @@ input#task-title-edit {
     &.add-task,
     &.save-task {
         background-color: #873232;
+    }
+}
+
+@media only screen and (max-width: 800px) {
+    form.task-form {
+        --task-width: 560px;
+        margin-top: 100px;
+    }
+}
+
+@media only screen and (max-width: 700px) {
+    form.task-form {
+        --task-width: 500px;
+    }
+}
+
+@media only screen and (max-width: 600px) {
+    form.task-form {
+        --task-width: 450px;
+        padding-block: 1rem;
+    }
+}
+
+@media only screen and (max-width: 500px) {
+    form.task-form {
+        --task-width: 400px;
+    }
+}
+
+@media only screen and (max-width: 430px) {
+    form.task-form {
+        --task-width: 350px;
+    }
+
+    form.task-form button {
+        width: 70px;
+        font-size: 0.9rem;
+    }
+
+    form.task-form .multi-inputs,
+    .task-form > .form-row:last-of-type {
+        justify-content: space-between;
+        & > select {
+            margin: 0;
+        }
+    }
+
+    form.task-form select,
+    form.task-form input[type="date"] {
+        width: 145px;
+        font-size: 0.9rem;
+        padding-top: 4px;
     }
 }
